--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
 	width: 100%;
 	height: 100%;
 	min-height: 100vh;
-    background : linear-gradient(rgba(0,0,0,0.5),rgba(0, 0, 0, 0.5)),url("background.JPG");
+    background : linear-gradient(rgba(0,0,0,0.5),rgba(0, 0, 0, 0.5)),url("./background.JPG");
 	background-size: cover;
 	background-position: center;
 	position: relative;
