--- a/style.css
+++ b/style.css
@@ -8,6 +8,13 @@
 body{
 	overflow-x: hidden;
 }
+#header{
+    width: 100%;
+    height: 100vh;
+    background-image: url(image.jpg);
+    background-size: cover;
+    background-position: center ;
+}
 .main-width{
 	width: 1280px;
 	max-width: 95%;
