--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(background.jpg);
+    background-image: url(image.jpg);
     background-size: cover;
     background-position: center ;
 	overflow:hidden;
