--- a/style.css
+++ b/style.css
@@ -415,6 +415,7 @@ padding: 0px 20px 100px  50px;
 
 
 /* ======================Staart of contact part===================== */
+/* start of github comment
 #contact{
 	background-color: #ebd69b;
 	margin-top: 2750px;
@@ -454,6 +455,14 @@ padding: 0px 20px 100px  50px;
 	margin-bottom: 35px;
 	transition: 0.5s;
 }
+/* end of git hub comment  */ */
+
+
+
+
+
+
+
 	/* text-decoration: none;
 	font-size: 30px;
 	margin-right: 15px;
@@ -461,6 +470,15 @@ padding: 0px 20px 100px  50px;
 	display: inline-block;
 	transition: 0.5s;
 } */
+
+
+
+
+
+
+
+/* start of github comment
+
 .social-icons a:hover{
 	color:#ff004f;
 	transform: translateY(-5px);
@@ -503,9 +521,10 @@ form btn2{
 	margin-top:20px;
 	font-size: 18px;
 	cursor: pointer;
-}
+} 
+end of github comment
 
-
+ */
 /* ================== Copyright footer section============== */
 /* .buttom{
 	margin-top: 243px;
@@ -516,7 +535,7 @@ form btn2{
 	color: #eee;
 	letter-spacing: 2px;
 	font-size: 15px;
-} */
+}  */
 .buttom{
 	width: 100%;
 	text-align: center;
